Remove unnecessary flag